Remove installation and launch instructions
Removed installation and launch instructions from README.